--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
     id 'java'
 }
 
@@ -12,11 +13,11 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation("com.squareup.moshi:moshi:1.8.0")
     implementation("com.alibaba:fastjson:1.2.59")
     testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version:'1.2.0'
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version:'5.2.0'
     testCompile group: 'org.junit.vintage', name: 'junit-vintage-engine', version:'5.2.0'
+
 }
 test{
     useJUnitPlatform()
@@ -31,3 +32,16 @@ jar {
 
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+jar.enabled(false)
+shadowJar {
+    archivesBaseName = "addressbook"
+    classifier(null)
+    manifest {
+        attributes 'Main-Class': 'Main'
+    }
+}
+assemble.dependsOn(shadowJar)
