--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20190722'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation("com.alibaba:fastjson:1.2.59")
     testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version:'1.2.0'
